Fixed the login Div going out of bound

--- a/LarpNet/LoginPage/Login.css
+++ b/LarpNet/LoginPage/Login.css
@@ -4,8 +4,7 @@
 }
 #center {
   text-align: center;
-  position: relative;
-  top: 50%;
+  position: absolute;
   height: auto;
 }
 body {
